# real-time-ai-based-real-estate-search-service

./: .env  .gitignore  CLAUDE.md  COMMAND.md  Development-Plan-Specification.md  README.md  db.sqlite3  pyproject.toml  test_api_manual.py
board/: HISTORY.md  TASKING.md  api_views.py  tests.py  urls.py  views.py
board/services/: __init__.py  redis_data_service.py
board/tests/: test_property_list_view.py  test_session_auth_js.py
board/views/: api_views.py  base_views.py
config/: celery.py  settings.py  urls.py
home/: HISTORY.md  TASKING.md  TASKING_KR.md  admin.py  models.py  urls.py
home/migrations/: 0001_initial.py  0002_keywordscore_property_recommendationcache_and_more.py  0003_remove_searchhistory_home_search_user_id_65fbe7_idx_and_more.py
home/services/: ai_dummy.py  crawlers.py  keyword_extraction.py  parsers.py  redis_storage.py  search_options.py
home/services/backup/: keyword_extraction.py
home/tests/: test_ai_dummy.py  test_chatgpt_integration.py  test_keyword_extraction.py  test_keyword_extraction_integration.py  test_redis_handler.py  test_session_auth_js.py  test_views.py
home/utils/: __init__.py  chatgpt_client.py
home/views/: __init__.py  api_views.py  base_views.py  search_views.py
pre-test/: dump.html  gemini-naver.py  popup_data.csv  popup_data_headless.csv
pre-test/temp/: crawlers-naver-with-search-opt-headed-final-v1.py  crawlers-naver-with-search-opt-headed-final.py  crawlers-naver-with-search-opt-headed-refac.py  crawlers-naver-with-search-opt-headed-v1.py  gemini-naver-backup.py  gemini-naver-create-emptry-csv.py  gemini-naver-success-csv-v1.py  gemini-naver-success-csv-v2.py  poc_chatgpt_api-final.py
pre-test/temp/chatgpt/: poc_chatgpt_api-ori.py  poc_chatgpt_api_import_settings.py
pre-test/temp/crawlers/: crawlers-naver-with-search-opt-headless-final.py  gemini-naver-1-loading-success.py
static/css/: board.css  home.css
static/js/: home.js  test_session_auth.js
templates/: base.html
templates/board/: results.html
templates/home/: index.html
templates/user/: delete_confirm.html  login.html  signup.html  update.html
user/: HISTORY.md  TASKING.md  TASKING_KR.md  forms.py  tests.py  urls.py  views.py
user/tests/: __init__.py  test_forms.py  test_integration.py  test_permissions.py  test_urls.py  test_views.py
utils/: __init__.py  admin.py  ai.py  apps.py  cache.py  crawlers.py  models.py  parsers.py  recommendations.py  redis_handler.py  tasks.py  test_utils.py  tests.py
utils/migrations/: 0001_initial.py
