[project]
name = "sns-account-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-extensions>=4.1",
    "ipython>=9.5.0",
    "jupyterlab>=4.4.7",
    "nest-asyncio>=1.6.0",
    "playwright>=1.55.0",
]
